add testing for KNN iterators and exact search parallelization
Signed-off-by: Leo Yu <leonyu@amazon.com>